# libft

./: .gitignore  CMakeLists.txt  Makefile  README.md  update_source_lists.sh
inc/: libft.h
include/: libft.h  printf.h
src/: ft_abs.c  ft_return.c
src/atoi_itoa/: ft_atod.c  ft_atof.c
src/file/: ft_read_file.c  ft_read_files.c  ft_read_stream.c  get_next_line.c
src/mem/: ft_free.c  ft_realloc.c
src/printf/: printf.c
src/str/: ft_str_count.c  ft_str_next_is.c  ft_str_split_str.c  ft_strcpy.c
